# code-sandboxes

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
code_sandboxes/: __init__.py  __version__.py  base.py  commands.py  exceptions.py  filesystem.py  models.py
code_sandboxes/local/: __init__.py  docker_sandbox.py  eval_sandbox.py  jupyter_sandbox.py
code_sandboxes/remote/: __init__.py  datalayer_sandbox.py  docker_sandbox.py
docker/: Dockerfile
docs/: Makefile  README.md  docusaurus.config.js  package.json
docs/docs/: index.mdx
docs/docs/api-reference/: _category_.yml  index.mdx
docs/docs/comparison/: _category_.yml  index.mdx
docs/docs/examples/: index.mdx
docs/docs/installation/: index.mdx
docs/docs/sandboxes/: _category_.yml  index.mdx
examples/: Makefile  README.md  datalayer_runtime_example.py  local_docker_example.py  local_eval_example.py  local_jupyter_example.py
tests/: __init__.py  conftest.py  test_factory.py  test_integration.py  test_local_eval.py  test_local_jupyter.py  test_models.py  test_sandboxes.py
